LockCode/LockConcurrent/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> test_spec
Rule 1     test_spec -> config_spec case_spec
Rule 2     config_spec -> db_config_spec runtime_config_spec
Rule 3     db_config_spec -> DB_CONFIG LBRACE STRING RBRACE
Rule 4     runtime_config_spec -> RUNTIME_CONFIG LBRACE STRING RBRACE
Rule 5     case_spec -> case_stmt
Rule 6     case_spec -> case_spec case_stmt
Rule 7     case_stmt -> TEST_CASE case_name case_start case_body case_end
Rule 8     case_name -> ID
Rule 9     case_start -> LBRACE
Rule 10    case_end -> RBRACE
Rule 11    case_body -> dynamic_param_stmt init_stmt do_stmt undo_stmt final_check_stmt
Rule 12    case_body -> init_stmt do_stmt undo_stmt final_check_stmt
Rule 13    dynamic_param_stmt -> DYNAMIC_PARAM d_start dynamic_var_declarations d_end
Rule 14    d_start -> LBRACE
Rule 15    d_end -> RBRACE
Rule 16    dynamic_var_declarations -> dynamic_var_declarations dynamic_var_declaration
Rule 17    dynamic_var_declarations -> dynamic_var_declaration
Rule 18    dynamic_var_declaration -> ID EQUAL rule
Rule 19    rule -> random_int
Rule 20    rule -> random_double
Rule 21    rule -> current_date
Rule 22    rule -> current_timestamp
Rule 23    rule -> random_string
Rule 24    rule -> sequence
Rule 25    random_int -> RAND_INT LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN
Rule 26    random_double -> RAND_DOUBLE LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RPAREN
Rule 27    current_date -> CURRENT_DATE LPAREN NUMBER RPAREN
Rule 28    current_timestamp -> CURRENT_TIMESTAMP LPAREN NUMBER RPAREN
Rule 29    random_string -> RAND_STRING LPAREN NUMBER COMMA NUMBER RPAREN
Rule 30    sequence -> SEQUENCE LPAREN NUMBER COMMA NUMBER RPAREN
Rule 31    python_expr -> PYTHON_EXP LPAREN STRING RPAREN
Rule 32    shared_var -> SHARED_LIST
Rule 33    init_stmt -> INIT init_start init_body init_end
Rule 34    init_start -> LBRACE
Rule 35    init_end -> RBRACE
Rule 36    init_body -> executable_stmts
Rule 37    do_stmt -> DO do_start do_body do_end
Rule 38    do_start -> LBRACE
Rule 39    do_end -> RBRACE
Rule 40    do_body -> executable_stmts
Rule 41    undo_stmt -> UNDO undo_start undo_body undo_end
Rule 42    undo_start -> LBRACE
Rule 43    undo_end -> RBRACE
Rule 44    undo_body -> executable_stmts
Rule 45    final_check_stmt -> FINAL_CHECK final_check_start final_body final_check_end
Rule 46    final_check_start -> LBRACE
Rule 47    final_body -> executable_stmts
Rule 48    final_check_end -> RBRACE
Rule 49    executable_stmts -> executable_stmt
Rule 50    executable_stmts -> executable_stmts executable_stmt
Rule 51    executable_stmt -> expression SEMICOLON
Rule 52    executable_stmt -> assignment SEMICOLON
Rule 53    executable_stmt -> assertion SEMICOLON
Rule 54    executable_stmt -> for_stmt
Rule 55    executable_stmt -> for_each_stmt
Rule 56    executable_stmt -> embed_python_stmt SEMICOLON
Rule 57    assertion -> EXPECT_EQUAL LPAREN expression COMMA expression RPAREN
Rule 58    assignment -> ID EQUAL expression
Rule 59    assignment -> ID EQUAL shared_var
Rule 60    expression -> query_stmt
Rule 61    expression -> result_set_query_stmt
Rule 62    expression -> query_into_stmt
Rule 63    expression -> query_with_stmt
Rule 64    expression -> query_with_into_stmt
Rule 65    expression -> var_name
Rule 66    expression -> set
Rule 67    expression -> rule
Rule 68    expression -> python_expr
Rule 69    expression -> NUMBER
Rule 70    set -> SET LPAREN STRING RPAREN
Rule 71    query_stmt -> COLON STRING
Rule 72    result_set_query_stmt -> COLON RESULT_SET LPAREN STRING RPAREN
Rule 73    query_into_stmt -> COLON STRING INTO var_list
Rule 74    var_name -> ID
Rule 75    var_name -> ID LBRACKET NUMBER RBRACKET
Rule 76    var_name -> ID LBRACKET ID RBRACKET
Rule 77    var_list -> var_name
Rule 78    var_list -> var_list COMMA var_name
Rule 79    query_with_stmt -> COLON STRING WITH var_list
Rule 80    query_with_into_stmt -> COLON STRING WITH var_list INTO var_list
Rule 81    for_stmt -> for_start1 executable_stmts for_end
Rule 82    for_stmt -> for_start2 executable_stmts for_end
Rule 83    for_start1 -> FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN LBRACE
Rule 84    for_start2 -> FOR ID IN RANGE LPAREN ID RPAREN LBRACE
Rule 85    for_end -> RBRACE
Rule 86    for_each_stmt -> for_each_start executable_stmts for_each_end
Rule 87    for_each_start -> FOR EACH var_list LBRACE
Rule 88    for_each_end -> RBRACE
Rule 89    embed_python_stmt -> EMBED_PYTHON LPAREN STRING RPAREN

Terminals, with rules where they appear

COLON                : 71 72 73 79 80
COMMA                : 25 25 26 26 26 29 30 57 78 83
CURRENT_DATE         : 27
CURRENT_TIMESTAMP    : 28
DB_CONFIG            : 3
DO                   : 37
DYNAMIC_PARAM        : 13
EACH                 : 87
EMBED_PYTHON         : 89
EQUAL                : 18 58 59
EXPECT_EQUAL         : 57
FINAL_CHECK          : 45
FOR                  : 83 84 87
ID                   : 8 18 58 59 74 75 76 76 83 84 84
IN                   : 83 84
INIT                 : 33
INTO                 : 73 80
LBRACE               : 3 4 9 14 34 38 42 46 83 84 87
LBRACKET             : 75 76
LPAREN               : 25 26 27 28 29 30 31 57 70 72 83 84 89
NUMBER               : 25 25 25 26 26 26 26 27 28 29 29 30 30 69 75 83 83
PYTHON_EXP           : 31
RAND_DOUBLE          : 26
RAND_INT             : 25
RAND_STRING          : 29
RANGE                : 83 84
RBRACE               : 3 4 10 15 35 39 43 48 85 88
RBRACKET             : 75 76
RESULT_SET           : 72
RPAREN               : 25 26 27 28 29 30 31 57 70 72 83 84 89
RUNTIME_CONFIG       : 4
SEMICOLON            : 51 52 53 56
SEQUENCE             : 30
SET                  : 70
SHARED_LIST          : 32
STRING               : 3 4 31 70 71 72 73 79 80 89
TEST_CASE            : 7
UNDO                 : 41
WITH                 : 79 80
error                : 

Nonterminals, with rules where they appear

assertion            : 53
assignment           : 52
case_body            : 7
case_end             : 7
case_name            : 7
case_spec            : 1 6
case_start           : 7
case_stmt            : 5 6
config_spec          : 1
current_date         : 21
current_timestamp    : 22
d_end                : 13
d_start              : 13
db_config_spec       : 2
do_body              : 37
do_end               : 37
do_start             : 37
do_stmt              : 11 12
dynamic_param_stmt   : 11
dynamic_var_declaration : 16 17
dynamic_var_declarations : 13 16
embed_python_stmt    : 56
executable_stmt      : 49 50
executable_stmts     : 36 40 44 47 50 81 82 86
expression           : 51 57 57 58
final_body           : 45
final_check_end      : 45
final_check_start    : 45
final_check_stmt     : 11 12
for_each_end         : 86
for_each_start       : 86
for_each_stmt        : 55
for_end              : 81 82
for_start1           : 81
for_start2           : 82
for_stmt             : 54
init_body            : 33
init_end             : 33
init_start           : 33
init_stmt            : 11 12
python_expr          : 68
query_into_stmt      : 62
query_stmt           : 60
query_with_into_stmt : 64
query_with_stmt      : 63
random_double        : 20
random_int           : 19
random_string        : 23
result_set_query_stmt : 61
rule                 : 18 67
runtime_config_spec  : 2
sequence             : 24
set                  : 66
shared_var           : 59
test_spec            : 0
undo_body            : 41
undo_end             : 41
undo_start           : 41
undo_stmt            : 11 12
var_list             : 73 78 79 80 80 87
var_name             : 65 77 78

Parsing method: LALR

state 0

    (0) S' -> . test_spec
    (1) test_spec -> . config_spec case_spec
    (2) config_spec -> . db_config_spec runtime_config_spec
    (3) db_config_spec -> . DB_CONFIG LBRACE STRING RBRACE

    DB_CONFIG       shift and go to state 4

    test_spec                      shift and go to state 1
    config_spec                    shift and go to state 2
    db_config_spec                 shift and go to state 3

state 1

    (0) S' -> test_spec .



state 2

    (1) test_spec -> config_spec . case_spec
    (5) case_spec -> . case_stmt
    (6) case_spec -> . case_spec case_stmt
    (7) case_stmt -> . TEST_CASE case_name case_start case_body case_end

    TEST_CASE       shift and go to state 7

    case_spec                      shift and go to state 5
    case_stmt                      shift and go to state 6

state 3

    (2) config_spec -> db_config_spec . runtime_config_spec
    (4) runtime_config_spec -> . RUNTIME_CONFIG LBRACE STRING RBRACE

    RUNTIME_CONFIG  shift and go to state 9

    runtime_config_spec            shift and go to state 8

state 4

    (3) db_config_spec -> DB_CONFIG . LBRACE STRING RBRACE

    LBRACE          shift and go to state 10


state 5

    (1) test_spec -> config_spec case_spec .
    (6) case_spec -> case_spec . case_stmt
    (7) case_stmt -> . TEST_CASE case_name case_start case_body case_end

    $end            reduce using rule 1 (test_spec -> config_spec case_spec .)
    TEST_CASE       shift and go to state 7

    case_stmt                      shift and go to state 11

state 6

    (5) case_spec -> case_stmt .

    TEST_CASE       reduce using rule 5 (case_spec -> case_stmt .)
    $end            reduce using rule 5 (case_spec -> case_stmt .)


state 7

    (7) case_stmt -> TEST_CASE . case_name case_start case_body case_end
    (8) case_name -> . ID

    ID              shift and go to state 13

    case_name                      shift and go to state 12

state 8

    (2) config_spec -> db_config_spec runtime_config_spec .

    TEST_CASE       reduce using rule 2 (config_spec -> db_config_spec runtime_config_spec .)


state 9

    (4) runtime_config_spec -> RUNTIME_CONFIG . LBRACE STRING RBRACE

    LBRACE          shift and go to state 14


state 10

    (3) db_config_spec -> DB_CONFIG LBRACE . STRING RBRACE

    STRING          shift and go to state 15


state 11

    (6) case_spec -> case_spec case_stmt .

    TEST_CASE       reduce using rule 6 (case_spec -> case_spec case_stmt .)
    $end            reduce using rule 6 (case_spec -> case_spec case_stmt .)


state 12

    (7) case_stmt -> TEST_CASE case_name . case_start case_body case_end
    (9) case_start -> . LBRACE

    LBRACE          shift and go to state 17

    case_start                     shift and go to state 16

state 13

    (8) case_name -> ID .

    LBRACE          reduce using rule 8 (case_name -> ID .)


state 14

    (4) runtime_config_spec -> RUNTIME_CONFIG LBRACE . STRING RBRACE

    STRING          shift and go to state 18


state 15

    (3) db_config_spec -> DB_CONFIG LBRACE STRING . RBRACE

    RBRACE          shift and go to state 19


state 16

    (7) case_stmt -> TEST_CASE case_name case_start . case_body case_end
    (11) case_body -> . dynamic_param_stmt init_stmt do_stmt undo_stmt final_check_stmt
    (12) case_body -> . init_stmt do_stmt undo_stmt final_check_stmt
    (13) dynamic_param_stmt -> . DYNAMIC_PARAM d_start dynamic_var_declarations d_end
    (33) init_stmt -> . INIT init_start init_body init_end

    DYNAMIC_PARAM   shift and go to state 23
    INIT            shift and go to state 24

    case_body                      shift and go to state 20
    dynamic_param_stmt             shift and go to state 21
    init_stmt                      shift and go to state 22

state 17

    (9) case_start -> LBRACE .

    DYNAMIC_PARAM   reduce using rule 9 (case_start -> LBRACE .)
    INIT            reduce using rule 9 (case_start -> LBRACE .)


state 18

    (4) runtime_config_spec -> RUNTIME_CONFIG LBRACE STRING . RBRACE

    RBRACE          shift and go to state 25


state 19

    (3) db_config_spec -> DB_CONFIG LBRACE STRING RBRACE .

    RUNTIME_CONFIG  reduce using rule 3 (db_config_spec -> DB_CONFIG LBRACE STRING RBRACE .)


state 20

    (7) case_stmt -> TEST_CASE case_name case_start case_body . case_end
    (10) case_end -> . RBRACE

    RBRACE          shift and go to state 27

    case_end                       shift and go to state 26

state 21

    (11) case_body -> dynamic_param_stmt . init_stmt do_stmt undo_stmt final_check_stmt
    (33) init_stmt -> . INIT init_start init_body init_end

    INIT            shift and go to state 24

    init_stmt                      shift and go to state 28

state 22

    (12) case_body -> init_stmt . do_stmt undo_stmt final_check_stmt
    (37) do_stmt -> . DO do_start do_body do_end

    DO              shift and go to state 30

    do_stmt                        shift and go to state 29

state 23

    (13) dynamic_param_stmt -> DYNAMIC_PARAM . d_start dynamic_var_declarations d_end
    (14) d_start -> . LBRACE

    LBRACE          shift and go to state 32

    d_start                        shift and go to state 31

state 24

    (33) init_stmt -> INIT . init_start init_body init_end
    (34) init_start -> . LBRACE

    LBRACE          shift and go to state 34

    init_start                     shift and go to state 33

state 25

    (4) runtime_config_spec -> RUNTIME_CONFIG LBRACE STRING RBRACE .

    TEST_CASE       reduce using rule 4 (runtime_config_spec -> RUNTIME_CONFIG LBRACE STRING RBRACE .)


state 26

    (7) case_stmt -> TEST_CASE case_name case_start case_body case_end .

    TEST_CASE       reduce using rule 7 (case_stmt -> TEST_CASE case_name case_start case_body case_end .)
    $end            reduce using rule 7 (case_stmt -> TEST_CASE case_name case_start case_body case_end .)


state 27

    (10) case_end -> RBRACE .

    TEST_CASE       reduce using rule 10 (case_end -> RBRACE .)
    $end            reduce using rule 10 (case_end -> RBRACE .)


state 28

    (11) case_body -> dynamic_param_stmt init_stmt . do_stmt undo_stmt final_check_stmt
    (37) do_stmt -> . DO do_start do_body do_end

    DO              shift and go to state 30

    do_stmt                        shift and go to state 35

state 29

    (12) case_body -> init_stmt do_stmt . undo_stmt final_check_stmt
    (41) undo_stmt -> . UNDO undo_start undo_body undo_end

    UNDO            shift and go to state 37

    undo_stmt                      shift and go to state 36

state 30

    (37) do_stmt -> DO . do_start do_body do_end
    (38) do_start -> . LBRACE

    LBRACE          shift and go to state 39

    do_start                       shift and go to state 38

state 31

    (13) dynamic_param_stmt -> DYNAMIC_PARAM d_start . dynamic_var_declarations d_end
    (16) dynamic_var_declarations -> . dynamic_var_declarations dynamic_var_declaration
    (17) dynamic_var_declarations -> . dynamic_var_declaration
    (18) dynamic_var_declaration -> . ID EQUAL rule

    ID              shift and go to state 42

    dynamic_var_declarations       shift and go to state 40
    dynamic_var_declaration        shift and go to state 41

state 32

    (14) d_start -> LBRACE .

    ID              reduce using rule 14 (d_start -> LBRACE .)


state 33

    (33) init_stmt -> INIT init_start . init_body init_end
    (36) init_body -> . executable_stmts
    (49) executable_stmts -> . executable_stmt
    (50) executable_stmts -> . executable_stmts executable_stmt
    (51) executable_stmt -> . expression SEMICOLON
    (52) executable_stmt -> . assignment SEMICOLON
    (53) executable_stmt -> . assertion SEMICOLON
    (54) executable_stmt -> . for_stmt
    (55) executable_stmt -> . for_each_stmt
    (56) executable_stmt -> . embed_python_stmt SEMICOLON
    (60) expression -> . query_stmt
    (61) expression -> . result_set_query_stmt
    (62) expression -> . query_into_stmt
    (63) expression -> . query_with_stmt
    (64) expression -> . query_with_into_stmt
    (65) expression -> . var_name
    (66) expression -> . set
    (67) expression -> . rule
    (68) expression -> . python_expr
    (69) expression -> . NUMBER
    (58) assignment -> . ID EQUAL expression
    (59) assignment -> . ID EQUAL shared_var
    (57) assertion -> . EXPECT_EQUAL LPAREN expression COMMA expression RPAREN
    (81) for_stmt -> . for_start1 executable_stmts for_end
    (82) for_stmt -> . for_start2 executable_stmts for_end
    (86) for_each_stmt -> . for_each_start executable_stmts for_each_end
    (89) embed_python_stmt -> . EMBED_PYTHON LPAREN STRING RPAREN
    (71) query_stmt -> . COLON STRING
    (72) result_set_query_stmt -> . COLON RESULT_SET LPAREN STRING RPAREN
    (73) query_into_stmt -> . COLON STRING INTO var_list
    (79) query_with_stmt -> . COLON STRING WITH var_list
    (80) query_with_into_stmt -> . COLON STRING WITH var_list INTO var_list
    (74) var_name -> . ID
    (75) var_name -> . ID LBRACKET NUMBER RBRACKET
    (76) var_name -> . ID LBRACKET ID RBRACKET
    (70) set -> . SET LPAREN STRING RPAREN
    (19) rule -> . random_int
    (20) rule -> . random_double
    (21) rule -> . current_date
    (22) rule -> . current_timestamp
    (23) rule -> . random_string
    (24) rule -> . sequence
    (31) python_expr -> . PYTHON_EXP LPAREN STRING RPAREN
    (83) for_start1 -> . FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN LBRACE
    (84) for_start2 -> . FOR ID IN RANGE LPAREN ID RPAREN LBRACE
    (87) for_each_start -> . FOR EACH var_list LBRACE
    (25) random_int -> . RAND_INT LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (26) random_double -> . RAND_DOUBLE LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (27) current_date -> . CURRENT_DATE LPAREN NUMBER RPAREN
    (28) current_timestamp -> . CURRENT_TIMESTAMP LPAREN NUMBER RPAREN
    (29) random_string -> . RAND_STRING LPAREN NUMBER COMMA NUMBER RPAREN
    (30) sequence -> . SEQUENCE LPAREN NUMBER COMMA NUMBER RPAREN

    NUMBER          shift and go to state 61
    ID              shift and go to state 62
    EXPECT_EQUAL    shift and go to state 63
    EMBED_PYTHON    shift and go to state 67
    COLON           shift and go to state 68
    SET             shift and go to state 69
    PYTHON_EXP      shift and go to state 76
    FOR             shift and go to state 77
    RAND_INT        shift and go to state 78
    RAND_DOUBLE     shift and go to state 79
    CURRENT_DATE    shift and go to state 80
    CURRENT_TIMESTAMP shift and go to state 81
    RAND_STRING     shift and go to state 82
    SEQUENCE        shift and go to state 83

    init_body                      shift and go to state 43
    executable_stmts               shift and go to state 44
    executable_stmt                shift and go to state 45
    expression                     shift and go to state 46
    assignment                     shift and go to state 47
    assertion                      shift and go to state 48
    for_stmt                       shift and go to state 49
    for_each_stmt                  shift and go to state 50
    embed_python_stmt              shift and go to state 51
    query_stmt                     shift and go to state 52
    result_set_query_stmt          shift and go to state 53
    query_into_stmt                shift and go to state 54
    query_with_stmt                shift and go to state 55
    query_with_into_stmt           shift and go to state 56
    var_name                       shift and go to state 57
    set                            shift and go to state 58
    rule                           shift and go to state 59
    python_expr                    shift and go to state 60
    for_start1                     shift and go to state 64
    for_start2                     shift and go to state 65
    for_each_start                 shift and go to state 66
    random_int                     shift and go to state 70
    random_double                  shift and go to state 71
    current_date                   shift and go to state 72
    current_timestamp              shift and go to state 73
    random_string                  shift and go to state 74
    sequence                       shift and go to state 75

state 34

    (34) init_start -> LBRACE .

    NUMBER          reduce using rule 34 (init_start -> LBRACE .)
    ID              reduce using rule 34 (init_start -> LBRACE .)
    EXPECT_EQUAL    reduce using rule 34 (init_start -> LBRACE .)
    EMBED_PYTHON    reduce using rule 34 (init_start -> LBRACE .)
    COLON           reduce using rule 34 (init_start -> LBRACE .)
    SET             reduce using rule 34 (init_start -> LBRACE .)
    PYTHON_EXP      reduce using rule 34 (init_start -> LBRACE .)
    FOR             reduce using rule 34 (init_start -> LBRACE .)
    RAND_INT        reduce using rule 34 (init_start -> LBRACE .)
    RAND_DOUBLE     reduce using rule 34 (init_start -> LBRACE .)
    CURRENT_DATE    reduce using rule 34 (init_start -> LBRACE .)
    CURRENT_TIMESTAMP reduce using rule 34 (init_start -> LBRACE .)
    RAND_STRING     reduce using rule 34 (init_start -> LBRACE .)
    SEQUENCE        reduce using rule 34 (init_start -> LBRACE .)


state 35

    (11) case_body -> dynamic_param_stmt init_stmt do_stmt . undo_stmt final_check_stmt
    (41) undo_stmt -> . UNDO undo_start undo_body undo_end

    UNDO            shift and go to state 37

    undo_stmt                      shift and go to state 84

state 36

    (12) case_body -> init_stmt do_stmt undo_stmt . final_check_stmt
    (45) final_check_stmt -> . FINAL_CHECK final_check_start final_body final_check_end

    FINAL_CHECK     shift and go to state 86

    final_check_stmt               shift and go to state 85

state 37

    (41) undo_stmt -> UNDO . undo_start undo_body undo_end
    (42) undo_start -> . LBRACE

    LBRACE          shift and go to state 88

    undo_start                     shift and go to state 87

state 38

    (37) do_stmt -> DO do_start . do_body do_end
    (40) do_body -> . executable_stmts
    (49) executable_stmts -> . executable_stmt
    (50) executable_stmts -> . executable_stmts executable_stmt
    (51) executable_stmt -> . expression SEMICOLON
    (52) executable_stmt -> . assignment SEMICOLON
    (53) executable_stmt -> . assertion SEMICOLON
    (54) executable_stmt -> . for_stmt
    (55) executable_stmt -> . for_each_stmt
    (56) executable_stmt -> . embed_python_stmt SEMICOLON
    (60) expression -> . query_stmt
    (61) expression -> . result_set_query_stmt
    (62) expression -> . query_into_stmt
    (63) expression -> . query_with_stmt
    (64) expression -> . query_with_into_stmt
    (65) expression -> . var_name
    (66) expression -> . set
    (67) expression -> . rule
    (68) expression -> . python_expr
    (69) expression -> . NUMBER
    (58) assignment -> . ID EQUAL expression
    (59) assignment -> . ID EQUAL shared_var
    (57) assertion -> . EXPECT_EQUAL LPAREN expression COMMA expression RPAREN
    (81) for_stmt -> . for_start1 executable_stmts for_end
    (82) for_stmt -> . for_start2 executable_stmts for_end
    (86) for_each_stmt -> . for_each_start executable_stmts for_each_end
    (89) embed_python_stmt -> . EMBED_PYTHON LPAREN STRING RPAREN
    (71) query_stmt -> . COLON STRING
    (72) result_set_query_stmt -> . COLON RESULT_SET LPAREN STRING RPAREN
    (73) query_into_stmt -> . COLON STRING INTO var_list
    (79) query_with_stmt -> . COLON STRING WITH var_list
    (80) query_with_into_stmt -> . COLON STRING WITH var_list INTO var_list
    (74) var_name -> . ID
    (75) var_name -> . ID LBRACKET NUMBER RBRACKET
    (76) var_name -> . ID LBRACKET ID RBRACKET
    (70) set -> . SET LPAREN STRING RPAREN
    (19) rule -> . random_int
    (20) rule -> . random_double
    (21) rule -> . current_date
    (22) rule -> . current_timestamp
    (23) rule -> . random_string
    (24) rule -> . sequence
    (31) python_expr -> . PYTHON_EXP LPAREN STRING RPAREN
    (83) for_start1 -> . FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN LBRACE
    (84) for_start2 -> . FOR ID IN RANGE LPAREN ID RPAREN LBRACE
    (87) for_each_start -> . FOR EACH var_list LBRACE
    (25) random_int -> . RAND_INT LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (26) random_double -> . RAND_DOUBLE LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (27) current_date -> . CURRENT_DATE LPAREN NUMBER RPAREN
    (28) current_timestamp -> . CURRENT_TIMESTAMP LPAREN NUMBER RPAREN
    (29) random_string -> . RAND_STRING LPAREN NUMBER COMMA NUMBER RPAREN
    (30) sequence -> . SEQUENCE LPAREN NUMBER COMMA NUMBER RPAREN

    NUMBER          shift and go to state 61
    ID              shift and go to state 62
    EXPECT_EQUAL    shift and go to state 63
    EMBED_PYTHON    shift and go to state 67
    COLON           shift and go to state 68
    SET             shift and go to state 69
    PYTHON_EXP      shift and go to state 76
    FOR             shift and go to state 77
    RAND_INT        shift and go to state 78
    RAND_DOUBLE     shift and go to state 79
    CURRENT_DATE    shift and go to state 80
    CURRENT_TIMESTAMP shift and go to state 81
    RAND_STRING     shift and go to state 82
    SEQUENCE        shift and go to state 83

    do_body                        shift and go to state 89
    executable_stmts               shift and go to state 90
    executable_stmt                shift and go to state 45
    expression                     shift and go to state 46
    assignment                     shift and go to state 47
    assertion                      shift and go to state 48
    for_stmt                       shift and go to state 49
    for_each_stmt                  shift and go to state 50
    embed_python_stmt              shift and go to state 51
    query_stmt                     shift and go to state 52
    result_set_query_stmt          shift and go to state 53
    query_into_stmt                shift and go to state 54
    query_with_stmt                shift and go to state 55
    query_with_into_stmt           shift and go to state 56
    var_name                       shift and go to state 57
    set                            shift and go to state 58
    rule                           shift and go to state 59
    python_expr                    shift and go to state 60
    for_start1                     shift and go to state 64
    for_start2                     shift and go to state 65
    for_each_start                 shift and go to state 66
    random_int                     shift and go to state 70
    random_double                  shift and go to state 71
    current_date                   shift and go to state 72
    current_timestamp              shift and go to state 73
    random_string                  shift and go to state 74
    sequence                       shift and go to state 75

state 39

    (38) do_start -> LBRACE .

    NUMBER          reduce using rule 38 (do_start -> LBRACE .)
    ID              reduce using rule 38 (do_start -> LBRACE .)
    EXPECT_EQUAL    reduce using rule 38 (do_start -> LBRACE .)
    EMBED_PYTHON    reduce using rule 38 (do_start -> LBRACE .)
    COLON           reduce using rule 38 (do_start -> LBRACE .)
    SET             reduce using rule 38 (do_start -> LBRACE .)
    PYTHON_EXP      reduce using rule 38 (do_start -> LBRACE .)
    FOR             reduce using rule 38 (do_start -> LBRACE .)
    RAND_INT        reduce using rule 38 (do_start -> LBRACE .)
    RAND_DOUBLE     reduce using rule 38 (do_start -> LBRACE .)
    CURRENT_DATE    reduce using rule 38 (do_start -> LBRACE .)
    CURRENT_TIMESTAMP reduce using rule 38 (do_start -> LBRACE .)
    RAND_STRING     reduce using rule 38 (do_start -> LBRACE .)
    SEQUENCE        reduce using rule 38 (do_start -> LBRACE .)


state 40

    (13) dynamic_param_stmt -> DYNAMIC_PARAM d_start dynamic_var_declarations . d_end
    (16) dynamic_var_declarations -> dynamic_var_declarations . dynamic_var_declaration
    (15) d_end -> . RBRACE
    (18) dynamic_var_declaration -> . ID EQUAL rule

    RBRACE          shift and go to state 93
    ID              shift and go to state 42

    d_end                          shift and go to state 91
    dynamic_var_declaration        shift and go to state 92

state 41

    (17) dynamic_var_declarations -> dynamic_var_declaration .

    RBRACE          reduce using rule 17 (dynamic_var_declarations -> dynamic_var_declaration .)
    ID              reduce using rule 17 (dynamic_var_declarations -> dynamic_var_declaration .)


state 42

    (18) dynamic_var_declaration -> ID . EQUAL rule

    EQUAL           shift and go to state 94


state 43

    (33) init_stmt -> INIT init_start init_body . init_end
    (35) init_end -> . RBRACE

    RBRACE          shift and go to state 96

    init_end                       shift and go to state 95

state 44

    (36) init_body -> executable_stmts .
    (50) executable_stmts -> executable_stmts . executable_stmt
    (51) executable_stmt -> . expression SEMICOLON
    (52) executable_stmt -> . assignment SEMICOLON
    (53) executable_stmt -> . assertion SEMICOLON
    (54) executable_stmt -> . for_stmt
    (55) executable_stmt -> . for_each_stmt
    (56) executable_stmt -> . embed_python_stmt SEMICOLON
    (60) expression -> . query_stmt
    (61) expression -> . result_set_query_stmt
    (62) expression -> . query_into_stmt
    (63) expression -> . query_with_stmt
    (64) expression -> . query_with_into_stmt
    (65) expression -> . var_name
    (66) expression -> . set
    (67) expression -> . rule
    (68) expression -> . python_expr
    (69) expression -> . NUMBER
    (58) assignment -> . ID EQUAL expression
    (59) assignment -> . ID EQUAL shared_var
    (57) assertion -> . EXPECT_EQUAL LPAREN expression COMMA expression RPAREN
    (81) for_stmt -> . for_start1 executable_stmts for_end
    (82) for_stmt -> . for_start2 executable_stmts for_end
    (86) for_each_stmt -> . for_each_start executable_stmts for_each_end
    (89) embed_python_stmt -> . EMBED_PYTHON LPAREN STRING RPAREN
    (71) query_stmt -> . COLON STRING
    (72) result_set_query_stmt -> . COLON RESULT_SET LPAREN STRING RPAREN
    (73) query_into_stmt -> . COLON STRING INTO var_list
    (79) query_with_stmt -> . COLON STRING WITH var_list
    (80) query_with_into_stmt -> . COLON STRING WITH var_list INTO var_list
    (74) var_name -> . ID
    (75) var_name -> . ID LBRACKET NUMBER RBRACKET
    (76) var_name -> . ID LBRACKET ID RBRACKET
    (70) set -> . SET LPAREN STRING RPAREN
    (19) rule -> . random_int
    (20) rule -> . random_double
    (21) rule -> . current_date
    (22) rule -> . current_timestamp
    (23) rule -> . random_string
    (24) rule -> . sequence
    (31) python_expr -> . PYTHON_EXP LPAREN STRING RPAREN
    (83) for_start1 -> . FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN LBRACE
    (84) for_start2 -> . FOR ID IN RANGE LPAREN ID RPAREN LBRACE
    (87) for_each_start -> . FOR EACH var_list LBRACE
    (25) random_int -> . RAND_INT LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (26) random_double -> . RAND_DOUBLE LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RPAREN
    (27) current_date -> . CURRENT_DATE LPAREN NUMBER RPAREN
    (28) current_timestamp -> . CURRENT_TIMESTAMP LPAREN NUMBER RPAREN
    (29) random_string -> . RAND_STRING LPAREN NUMBER COMMA NUMBER RPAREN
    (30) sequence -> . SEQUENCE LPAREN NUMBER COMMA NUMBER RPAREN

    RBRACE          reduce using rule 36 (init_body -> executable_stmts .)
    NUMBER          shift and go to state 61
    ID              shift and go to state 62
    EXPECT_EQUAL    shift and go to state 63
    EMBED_PYTHON    shift and go to state 67
    COLON           shift and go to state 68
    SET             shift and go to state 69
    PYTHON_EXP      shift and go to state 76
    FOR             shift and go to state 77
    RAND_INT        shift and go to state 78
    RAND_DOUBLE     shift and go to state 79
    CURRENT_DATE    shift and go to state 80
    CURRENT_TIMESTAMP shift and go to state 81
    RAND_STRING     shift and go to state 82
    SEQUENCE        shift and go to state 83

    executable_stmt                shift and go to state 97
    expression                     shift and go to state 46
    assignment                     shift and go to state 47
    assertion                      shift and go to state 48
    for_stmt                       shift and go to state 49
    for_each_stmt                  shift and go to state 50
    embed_python_stmt              shift and go to state 51
    query_stmt                     shift and go to state 52
    result_set_query_stmt          shift and go to state 53
    query_into_stmt                shift and go to state 54
    query_with_stmt                shift and go to state 55
    query_with_into_stmt           shift and go to state 56
    var_name                       shift and go to state 57
    set                            shift and go to state 58
    rule                           shift and go to state 59
    python_expr                    shift and go to state 60
    for_start1                     shift and go to state 64
    for_start2                     shift and go to state 65
    for_each_start                 shift and go to state 66
    random_int                     shift and go to state 70
    random_double                  shift and go to state 71
    current_date                   shift and go to state 72
    current_timestamp              shift and go to state 73
    random_string                  shift and go to state 74
    sequence                       shift and go to state 75

state 45

    (49) executable_stmts -> executable_stmt .

    NUMBER          reduce using rule 49 (executable_stmts -> executable_stmt .)
    ID              reduce using rule 49 (executable_stmts -> executable_stmt .)
    EXPECT_EQUAL    reduce using rule 49 (executable_stmts -> executable_stmt .)
    EMBED_PYTHON    reduce using rule 49 (executable_stmts -> executable_stmt .)
    COLON           reduce using rule 49 (executable_stmts -> executable_stmt .)
